--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,18 @@ hs_err_pid*
 *.iml
 *.ipr
 */target/
+HELP.md
+target/
+
+!.mvn/wrapper/maven-wrapper.jar
+!**/src/main/**/target/
+!**/src/test/**/target/
+
+### STS ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
