--- a/pom.xml
+++ b/pom.xml
@@ -19,8 +19,8 @@
     <modules>
         <module>zero-common</module>
         <module>zero-system</module>
+        <module>zero-admin-api</module>
 <!--         <module>zero-core</module>-->
-<!--        <module>zero-admin-api</module>-->
 
 <!--        <module>zero-admin-web</module>-->
         <!--        <module>zero-logging</module>-->
@@ -56,6 +56,70 @@
 
     </properties>
 
+    <!-- 依赖声明 -->
+    <dependencyManagement>
+        <dependencies>
+            <!--tk.mybatis-->
+            <dependency>
+                <groupId>tk.mybatis</groupId>
+                <artifactId>mapper-spring-boot-starter</artifactId>
+                <version>${tk.mybatis.version}</version>
+            </dependency>
+            <!--pagehelper-->
+            <dependency>
+                <groupId>com.github.pagehelper</groupId>
+                <artifactId>pagehelper-spring-boot-starter</artifactId>
+                <version>${pagehelper.starter.version}</version>
+            </dependency>
+            <!--druid-->
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>druid-spring-boot-starter</artifactId>
+                <version>${druid.version}</version>
+            </dependency>
+            <!-- 文件上传工具类 -->
+            <dependency>
+                <groupId>commons-fileupload</groupId>
+                <artifactId>commons-fileupload</artifactId>
+                <version>${commons.fileupload.version}</version>
+            </dependency>
+            <!--hutool-->
+            <dependency>
+                <groupId>cn.hutool</groupId>
+                <artifactId>hutool-all</artifactId>
+                <version>${hutool.all.version}</version>
+            </dependency>
+            <!--fastjson-->
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>fastjson</artifactId>
+                <version>${fastjson.version}</version>
+            </dependency>
+            <!-- HTML解析器 -->
+            <dependency>
+                <groupId>org.jsoup</groupId>
+                <artifactId>jsoup</artifactId>
+                <version>${jsoup.version}</version>
+            </dependency>
+
+
+            <dependency>
+                <groupId>com.zero</groupId>
+                <artifactId>zero-common</artifactId>
+                <version>${zero.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.zero</groupId>
+                <artifactId>zero-system</artifactId>
+                <version>${zero.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.zero</groupId>
+                <artifactId>zero-admin-api</artifactId>
+                <version>${zero.version}</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
     <!--全局公共依赖-->
     <dependencies>
@@ -69,4 +133,17 @@
 
     </dependencies>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                    <encoding>${project.build.sourceEncoding}</encoding>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
