--- a/zero-admin-api/pom.xml
+++ b/zero-admin-api/pom.xml
@@ -14,7 +14,7 @@
     <dependencies>
         <dependency>
             <groupId>com.zero</groupId>
-            <artifactId>zero-system</artifactId>
+            <artifactId>zero-core</artifactId>
         </dependency>
 
         <dependency>
